# SQLiteMate

./: .gitignore  CMakeLists.txt  README.md
include/: DefaultNames.h  SQLiteBroker.h
include/utils/: ConsoleLogger.h  DefaultNames.h
src/: SQLiteBroker.cpp  main.cpp
